@@ -36,6 +36,7 @@ import org.apache.maven.artifact.repository.ArtifactRepositoryFactory;
 import org.apache.maven.artifact.repository.ArtifactRepositoryPolicy;
 import org.apache.maven.artifact.repository.layout.DefaultRepositoryLayout;
 import org.apache.maven.artifact.resolver.AbstractArtifactResolutionException;
+import org.apache.maven.artifact.resolver.ArtifactResolutionException;
 import org.apache.maven.artifact.resolver.ArtifactResolver;
 import org.apache.maven.artifact.transform.ArtifactTransformationManager;
 import org.apache.tools.ant.taskdefs.Expand;
@@ -67,6 +68,7 @@ import java.io.IOException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
@@ -87,6 +89,7 @@ public class MavenRepositoryImpl extends MavenRepository {
     protected ArtifactFactory af;
     protected ArtifactResolver ar;
     protected List<ArtifactRepository> remoteRepositories = new ArrayList<ArtifactRepository>();
+    private final File localRepo;
     protected ArtifactRepository local;
     protected ArtifactRepositoryFactory arf;
     private PlexusContainer plexus;
@@ -110,8 +113,9 @@ public class MavenRepositoryImpl extends MavenRepository {
         ar = plexus.lookup(ArtifactResolver.class);
         arf = plexus.lookup(ArtifactRepositoryFactory.class);
 
+        localRepo = new File(new File(System.getProperty("user.home")), ".m2/repository");
         local = arf.createArtifactRepository("local",
-                new File(new File(System.getProperty("user.home")), ".m2/repository").toURI().toURL().toExternalForm(),
+                localRepo.toURI().toURL().toExternalForm(),
                 new DefaultRepositoryLayout(), POLICY, POLICY);
     }
 
@@ -171,10 +175,10 @@ public class MavenRepositoryImpl extends MavenRepository {
 
         URLConnection con = url.openConnection();
         if (url.getUserInfo()!=null) {
-            con.setRequestProperty("Authorization","Basic "+new sun.misc.BASE64Encoder().encode(url.getUserInfo().getBytes("UTF-8")));
+            con.setRequestProperty("Authorization", "Basic " + Base64.getEncoder().encodeToString(url.getUserInfo().getBytes("UTF-8")));
         }
 
-        if (!expanded.exists() || !local.exists() || (local.lastModified()!=con.getLastModified() && !offlineIndex)) {
+        if (!expanded.exists() || !local.exists() || (local.lastModified() < con.getLastModified() && !offlineIndex)) {
             System.out.println("Downloading "+url);
             // if the download fail in the middle, only leave a broken tmp file
             dir.mkdirs();
@@ -230,7 +234,14 @@ public class MavenRepositoryImpl extends MavenRepository {
 
     protected File resolve(ArtifactInfo a, String type, String classifier) throws AbstractArtifactResolutionException {
         Artifact artifact = af.createArtifactWithClassifier(a.groupId, a.artifactId, a.version, type, classifier);
-        ar.resolve(artifact, remoteRepositories, local);
+        if (!new File(localRepo, local.pathOf(artifact)).isFile()) {
+            System.err.println("Downloading " + artifact);
+        }
+        try {
+            ar.resolve(artifact, remoteRepositories, local);
+        } catch (RuntimeException e) {
+            throw new ArtifactResolutionException(e.getMessage(), artifact);
+        }
         return artifact.getFile();
     }
 
@@ -302,6 +313,10 @@ public class MavenRepositoryImpl extends MavenRepository {
             if (!a.artifactId.equals("jenkins-war")
              && !a.artifactId.equals("hudson-war"))  continue;      // somehow using this as a query results in 0 hits.
             if (a.classifier!=null)  continue;          // just pick up the main war
+            if (IGNORE.containsKey(a.artifactId + "-" + a.version)) {
+                System.out.println("=> Ignoring " + a.artifactId + ", version " + a.version + " because this version is blacklisted");
+                continue;
+            }
             if (cap!=null && new VersionNumber(a.version).compareTo(cap)>0) continue;
 
             VersionNumber v = new VersionNumber(a.version);
